# app/models/staff.rb
@@ -1,2 +1,3 @@
 class Staff < ApplicationRecord
+  has_and_belongs_to_many :services
 end
